Add initial HTML structure and CSS styles for pet fostering site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Content goes here -->
+  <!-- Simple site header with site name -->
+  <header class="site-header">
+    <h2>PetQuest</h2>
+  </header>
+
+  <header class="cta-banner">
+    <h1>Open Your Heart: Foster a Pet Today!</h1>
+    <p>Fostering rescue animals gives them a safe place to heal and prepares them for a loving forever home. Your kindness can change a life.</p>
+    <a href="#" class="cta-button">Become a Foster</a>
+  </header>
+
+  <!-- New section with image and info in two columns -->
+  <section class="info-section">
+    <img src="img/pet.jpg" alt="Happy foster pet" class="info-image">
+    <div class="info-text">
+      <h3>Why Foster a Pet?</h3>
+      <p>
+        Fostering gives animals a second chance at life. It helps them adjust to home life, learn to trust, and become ready for adoption. 
+        By fostering, you provide love, care, and a safe space for pets in need.
+      </p>
+    </div>
+  </section>
 </body>
 </html>
